Escolas e lojas adicionadas

--- a/entregas.html
+++ b/entregas.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Livraria e Distribuidora Rio Nilo</title>
+  <meta name="description" content="Veja como funcionam as entregas da Livraria Rio Nilo: frete gratuito, envio direto &agrave;s escolas em at&eacute; 72 horas e suporte r&aacute;pido para ocorr&ecirc;ncias.">
+  <link rel="canonical" href="https://www.livrariarionilo.com.br/entregas.html">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="pagamentos.css">
