--- a/escola1.html
+++ b/escola1.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login</title>
+    <meta name="description" content="Busque sua escola na Livraria Rio Nilo, acesse listas de materiais exclusivos e entre na plataforma de compras com seguran&ccedil;a e suporte dedicado.">
+    <link rel="canonical" href="https://www.livrariarionilo.com.br/escola1.html">
     <link rel="shortcut icon" href="Nova-logo-rio-nilo-_3_.ico" type="image/x-icon">
     <link rel="stylesheet" href="escola1.css">
 </head>
@@ -29,51 +31,61 @@
 
         <div class="product-grid">
             <div class="product-card">
-                <img src="unesp.png" alt="Produto 2"/>
-                <h2>Escola Santos Dumont</h2>
-                <p>Endereço: rua sla sla</p>
-                <p class="price">###############></p>
+                <img src="Instituto Adalberto.webp" alt="Produto 2"/>
+                <h2>Inst. Adalberto Carvalho - Matriz</h2>
+                <p>End: R. B- Jaguaripe L, 13 - Fazenda Grande I</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
-                <img src="unesp.png" alt="Produto 2"/>
-                <h2>Escola Tereza Froiz</h2>
-                <p>Endereço: rua sla sla</p>
-                <p class="price">###############></p>
-                <button class="affiliate-button">ENTRAR</button>
+                <img src="Instituto Adalberto.webp" alt="Produto 2"/>
+                <h2>Inst. Adalberto Carvalho  - Filial</h2>
+                <p>End: Estrada da paciência , nº 2183, loja 01 Cajazeiras 8</p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-inst-filial.html">ENTRAR</button>
+            </div>
+
+            <div class="product-card">
+                <img src="Instituto Adalberto.webp" alt="Produto 2"/>
+                <h2>Inst. Adalberto Carvalho  - Filial</h2>
+                <p>End: Fazenda grande 1 ,setor 3, quadra b, caminho 13 nº 1</p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-inst-filial2.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
                 <img src="unesp.png" alt="Produto 2"/>
-                <h2>Escola Mundo Encantado</h2>
-                <p>Endereço: rua sla sla</p>
-                <p class="price">###############></p>
-                <button class="affiliate-button">ENTRAR</button>
+                <h2>Creche Escola Viva Criança</h2>
+                <p>End: Rua Nivaldo Domingos, Quadra K, Lote 24 e 25 - Ipitanga, Lauro de Freitas - BA</p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-creche.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
                 <img src="unesp.png" alt="Produto 2"/>
-                <h2>Escola Raio de Sol</h2>
-                <p>Endereço: rua sla sla</p>
-                <p class="price">###############></p>
-                <button class="affiliate-button">ENTRAR</button>
+                <h2>Escola Sena Dantas</h2>
+                <p>End: R. Alameda - Parque Ipe, Feira de Santana - BA</p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-sena.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
                 <img src="unesp.png" alt="Produto 2"/>
-                <h2>Escola Primeiras Descobertas</h2>
-                <p>Endereço: rua sla sla</p>
-                <p class="price">###############></p>
-                <button class="affiliate-button">ENTRAR</button>
+                <h2>Centro Educacional Agape</h2>
+                <p>End: Rua da Mangueira, sn - Vila Sauipe - Mata de S. João</p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-agape.html">ENTRAR</button>
             </div>
+        </div>
 
-            <div class="product-card">
+        <div class="product-card">
                 <img src="unesp.png" alt="Produto 2"/>
-                <h2>Escola Primeiras Descobertas</h2>
-                <p>Endereço: rua sla sla</p>
-                <p class="price">###############></p>
-                <button class="affiliate-button">ENTRAR</button>
+                <h2>Colégio Mario junior</h2>
+                <p>End: Av. Edgard Santos, 420 - Narandiba, Salvador - BA</p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-junior.html">ENTRAR</button>
+            </div>
+        </div>
+
+        <div class="product-card">
+                <img src="unesp.png" alt="Produto 2"/>
+                <h2>Matildes de Jesus Santos Brito</h2>
+                <p>End: Rua da Barragem, 10, Sete de Abril</p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-matildes.html">ENTRAR</button>
             </div>
         </div>
 
