--- a/finalizar1.html
+++ b/finalizar1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
+    <meta name="description" content="Conclua o checkout da Livraria Rio Nilo com revis&atilde;o de dados, sele&ccedil;&atilde;o da forma de pagamento e confirma&ccedil;&atilde;o dos materiais escolares do pedido.">
+    <link rel="canonical" href="https://www.livrariarionilo.com.br/finalizar1.html">
     <link rel="shortcut icon" href="Nova-logo-rio-nilo-_3_.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="finalizar1.css"> 
