--- a/garantia.html
+++ b/garantia.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livraria e Distribuidora Rio Nilo</title>
+    <meta name="description" content="Conhe&ccedil;a os termos de garantia da Livraria Rio Nilo, o que est&aacute; coberto por defeitos de fabrica&ccedil;&atilde;o e como acionar o suporte com imagens do produto.">
+    <link rel="canonical" href="https://www.livrariarionilo.com.br/garantia.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="pagamentos.css">
