--- a/pagamentos.html
+++ b/pagamentos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formas de Pagamento - Livraria e Distribuidora Rio Nilo</title>
+    <meta name="description" content="Descubra as formas de pagamento aceitas pela Livraria Rio Nilo, incluindo cart&atilde;o de cr&eacute;dito, d&eacute;bito e PIX, com orienta&ccedil;&otilde;es de parcelamento seguro.">
+    <link rel="canonical" href="https://www.livrariarionilo.com.br/pagamentos.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="pagamentos.css">
