--- a/pedidos.html
+++ b/pedidos.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pedidos Finalizados</title>
+  <meta name="description" content="Acompanhe pedidos finalizados na Livraria Rio Nilo com dados de clientes, itens comprados, valores e datas exibidos no painel administrativo.">
+  <link rel="canonical" href="https://www.livrariarionilo.com.br/pedidos.html">
   <link rel="stylesheet" href="pedidos.css">
 </head>
 
