--- a/devolucao.html
+++ b/devolucao.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Livraria e Distribuidora Rio Nilo</title>
+  <meta name="description" content="Entenda a pol&iacute;tica de trocas e devolu&ccedil;&otilde;es da Livraria Rio Nilo, prazos de at&eacute; 7 dias, condi&ccedil;&otilde;es dos livros e como solicitar atendimento pelo WhatsApp.">
+  <link rel="canonical" href="https://www.livrariarionilo.com.br/devolucao.html">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="pagamentos.css">
