--- a/faleconosco.html
+++ b/faleconosco.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livraria e Distribuidora Rio Nilo</title>
+    <meta name="description" content="Entre em contato com a Livraria Rio Nilo via WhatsApp ou e-mail para tirar d&uacute;vidas, pedir suporte nas compras e receber atendimento em hor&aacute;rio comercial.">
+    <link rel="canonical" href="https://www.livrariarionilo.com.br/faleconosco.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="pagamentos.css">
