--- a/finalizar.html
+++ b/finalizar.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
+    <meta name="description" content="Finalize sua compra na Livraria Rio Nilo informando dados do respons&aacute;vel, endere&ccedil;o e forma de pagamento em um checkout seguro e criptografado.">
+    <link rel="canonical" href="https://www.livrariarionilo.com.br/finalizar.html">
     <link rel="shortcut icon" href="Nova-logo-rio-nilo-_3_.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="finalizar.css"> 
