--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Livraria e Distribuidora Rio Nilo</title>
+  <meta name="description" content="Livraria e Distribuidora Rio Nilo conecta escolas e fam&iacute;lias com listas escolares completas, compras seguras e atendimento personalizado em Salvador.">
+  <link rel="canonical" href="https://www.livrariarionilo.com.br/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
