--- a/privacidade.html
+++ b/privacidade.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livraria e Distribuidora Rio Nilo</title>
+    <meta name="description" content="Leia a pol&iacute;tica de privacidade da Livraria Rio Nilo e entenda o tratamento dos dados pessoais, compartilhamento com parceiros e medidas de seguran&ccedil;a.">
+    <link rel="canonical" href="https://www.livrariarionilo.com.br/privacidade.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="pagamentos.css">
