--- a/quemsomos.html
+++ b/quemsomos.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livraria e Distribuidora Rio Nilo</title>
+    <meta name="description" content="Saiba mais sobre a Livraria e Distribuidora Rio Nilo, miss&atilde;o, vis&atilde;o e valores com foco em educa&ccedil;&atilde;o de qualidade e parcerias com escolas da Bahia.">
+    <link rel="canonical" href="https://www.livrariarionilo.com.br/quemsomos.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="pagamentos.css">
