--- a/loja-sena.html
+++ b/loja-sena.html
@@ -57,7 +57,7 @@
       <div class="school-card">
         <h2>Escola</h2>
         <img src="unesp.png" alt="Logo da Escola" class="school-logo">
-        <h3 class="school-name" id="currentSchoolName">Santos Dumont</h3> </div>
+        <h3 class="school-name" id="currentSchoolName">Sena Dantas</h3> </div>
       <nav class="texto">
         <h2>Filtrar</h2>
       </nav>
