--- a/loja-creche.html
+++ b/loja-creche.html
@@ -55,9 +55,9 @@
   <div class="container">
     <nav class="sidebar">
       <div class="school-card">
-        <h2>Escola</h2>
+        <h2>Creche</h2>
         <img src="unesp.png" alt="Logo da Escola" class="school-logo">
-        <h3 class="school-name" id="currentSchoolName">Santos Dumont</h3> </div>
+        <h3 class="school-name" id="currentSchoolName">Escola Viva Criança</h3> </div>
       <nav class="texto">
         <h2>Filtrar</h2>
       </nav>
