--- a/loja.html
+++ b/loja.html
@@ -55,9 +55,9 @@
   <div class="container">
     <nav class="sidebar">
       <div class="school-card">
-        <h2>Escola</h2>
-        <img src="unesp.png" alt="Logo da Escola" class="school-logo">
-        <h3 class="school-name" id="currentSchoolName">Santos Dumont</h3> </div>
+        <h2>Instituto</h2>
+        <img src="Instituto Adalberto.webp" alt="Logo da Escola" class="school-logo">
+        <h3 class="school-name" id="currentSchoolName">Adalberto Carvalho - Matriz</h3> </div>
       <nav class="texto">
         <h2>Filtrar</h2>
       </nav>
@@ -66,16 +66,12 @@
       <select id="tipo" class="filter">
         <option value="">Todos</option>
         <option value="aventura">Infantil</option>
-        <option value="terror">Fundamental Anos Iniciais</option>
-        <option value="biografia">Fundamental Anos Finais</option>
       </select>
 
       <label for="tipo">Série:</label>
       <select id="idade" class="filter">
         <option value="">Todos</option>
-        <option value="infantil">1 Ano - 5 Anos</option>
-        <option value="juvenil">1º Ano - 4º Ano</option>
-        <option value="adulto">5º Ano - 9º Ano</option>
+        <option value="infantil">2 Anos</option>
       </select>
 
     </nav>
@@ -89,46 +85,10 @@
 
       <div class="cards" id="book-cards-container">
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 0,01</p>
+          <img src="Aprender com alegria.webp" alt="Capa do livro Aprender com Alegria">
+          <h3>Aprender com Alegria - Meu Primeiro Livro - 2 Anos</h3>
+          <p class="price">R$200,00</p>
           <button class="add-to-cart">Comprar</button>
-        </div>
-        <div class="card">
-          <img src="livro3.png" alt="Five Nights at Freddy's">
-          <h3>Five Nights at Freddy's</h3>
-          <p>Intrínseca</p>
-          <p class="price">R$ 0,02</p>
-          <button class="add-to-cart">Comprar</button>
-        </div>
-        <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
-        </div>
-        <div class="card">
-          <img src="livro2.png" alt="Olhos Prateados">
-          <h3>Olhos Prateados</h3>
-          <p>Intrínseca</p>
-          <p class="price">R$ 47,92</p>
-          <button class="add-to-cart">Comprar</button>
-        </div>
-        <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
-        </div>
-        <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
         </div>
       </div>
 
