loja da creche viva criança em andamento

--- a/escola1.html
+++ b/escola1.html
@@ -31,21 +31,21 @@
 
         <div class="product-grid">
             <div class="product-card">
-                <img src="Instituto Adalberto.webp" alt="Produto 2"/>
+                <img src="Aldaberto carvalho.jpg" alt="Produto 2"/>
                 <h2>Inst. Adalberto Carvalho - Matriz</h2>
                 <p>End: R. B- Jaguaripe L, 13 - Fazenda Grande I</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
-                <img src="Instituto Adalberto.webp" alt="Produto 2"/>
+                <img src="Aldaberto carvalho.jpg" alt="Produto 2"/>
                 <h2>Inst. Adalberto Carvalho  - Filial</h2>
                 <p>End: Estrada da paciência , nº 2183, loja 01 Cajazeiras 8</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-inst-filial.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
-                <img src="Instituto Adalberto.webp" alt="Produto 2"/>
+                <img src="Aldaberto carvalho.jpg" alt="Produto 2"/>
                 <h2>Inst. Adalberto Carvalho  - Filial</h2>
                 <p>End: Fazenda grande 1 ,setor 3, quadra b, caminho 13 nº 1</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-inst-filial2.html">ENTRAR</button>
