--- a/loja-inst-filial2.html
+++ b/loja-inst-filial2.html
@@ -56,7 +56,7 @@
     <nav class="sidebar">
       <div class="school-card">
         <h2>Instituto</h2>
-        <img src="Instituto Adalberto.webp" alt="Logo da Escola" class="school-logo">
+        <img src="Aldaberto carvalho.jpg" alt="Logo da Escola" class="school-logo">
         <h3 class="school-name" id="currentSchoolName">Adalberto Carvalho - Filial</h3> </div>
       <nav class="texto">
         <h2>Filtrar</h2>
