Add conteúdos nas lojas

--- a/loja-agape.html
+++ b/loja-agape.html
@@ -67,15 +67,14 @@
         <option value="">Todos</option>
         <option value="aventura">Infantil</option>
         <option value="terror">Fundamental Anos Iniciais</option>
-        <option value="biografia">Fundamental Anos Finais</option>
       </select>
 
       <label for="tipo">Série:</label>
       <select id="idade" class="filter">
         <option value="">Todos</option>
-        <option value="infantil">1 Ano - 5 Anos</option>
-        <option value="juvenil">1º Ano - 4º Ano</option>
-        <option value="adulto">5º Ano - 9º Ano</option>
+        <option value="infantil">G1 - G5</option>
+        <option value="juvenil">1º Ano - 5º Ano</option>
+
       </select>
 
     </nav>
@@ -89,46 +88,59 @@
 
       <div class="cards" id="book-cards-container">
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 0,01</p>
+          <img src="Capas Escola Agape/Aprender com alegria.webp" alt="Capa do kit Aprender com Alegria G2">
+          <h3>KIT Aprender com Alegria G2</h3>
+          <p class="price">R$250,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro3.png" alt="Five Nights at Freddy's">
-          <h3>Five Nights at Freddy's</h3>
-          <p>Intrínseca</p>
-          <p class="price">R$ 0,02</p>
+          <img src="Capas Escola Agape/Aprender com alegria 3.webp" alt="Capa do kit Aprender com Alegria G3">
+          <h3>KIT Aprender com Alegria G3</h3>
+          <p class="price">R$270,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
-        </div>
-        <div class="card">
-          <img src="livro2.png" alt="Olhos Prateados">
-          <h3>Olhos Prateados</h3>
-          <p>Intrínseca</p>
-          <p class="price">R$ 47,92</p>
+          <img src="Capas Escola Agape/Aprender com alegria 4.webp" alt="Capa do kit Aprender com Alegria G4">
+          <h3>KIT Aprender com Alegria G4</h3>
+          <p class="price">R$280,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
+          <img src="Capas Escola Agape/Aprender com alegria 5.webp" alt="Capa do kit Aprender com Alegria G5">
+          <h3>KIT Aprender com Alegria G5</h3>
+          <p class="price">R$300,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <!-- Anos iniciais -->
+         <div class="card">
+          <img src="Capas Escola Agape/LIN1.png" alt="Capa do Ensino Fundamental 1ºAno">
+          <h3>Ensino Fundamental 1ºAno</h3>
+          <p class="price">R$600,00</p>
+          <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
+          <img src="Capas Escola Agape/LIN2.png" alt="Capa do Ensino Fundamental 2ºAno">
+          <h3>Ensino Fundamental 2ºAno</h3>
+          <p class="price">R$550,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Escola Agape/LIN3.png" alt="Capa do Ensino Fundamental 3ºAno">
+          <h3>Ensino Fundamental 3ºAno</h3>
+          <p class="price">R$550,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Escola Agape/LIN4.png" alt="Capa do Ensino Fundamental 4ºAno">
+          <h3>Ensino Fundamental 4ºAno</h3>
+          <p class="price">R$550,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Escola Agape/LIN5.png" alt="Capa do Ensino Fundamental 5ºAno">
+          <h3>Ensino Fundamental 5ºAno</h3>
+          <p class="price">R$550,00</p>
+          <button class="add-to-cart">Comprar</button>
         </div>
       </div>
 
