--- a/loja-junior.html
+++ b/loja-junior.html
@@ -89,46 +89,84 @@
 
       <div class="cards" id="book-cards-container">
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 0,01</p>
+          <img src="Capas Mundo Encantado/INF2 (1).png" alt="Capa do livro Educação infantil G2">
+          <h3>Educação infantil G2</h3>
+          <p class="price">R$ 432,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro3.png" alt="Five Nights at Freddy's">
-          <h3>Five Nights at Freddy's</h3>
-          <p>Intrínseca</p>
-          <p class="price">R$ 0,02</p>
+          <img src="Capas Mundo Encantado/INF3.png" alt="Capa do livro Educação infantil G3">
+          <h3>Educação infantil G3</h3>
+          <p class="price">R$ 432,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
-        </div>
-        <div class="card">
-          <img src="livro2.png" alt="Olhos Prateados">
-          <h3>Olhos Prateados</h3>
-          <p>Intrínseca</p>
-          <p class="price">R$ 47,92</p>
+          <img src="Capas Mundo Encantado/INF4.png" alt="Capa do livro Educação infantil G4">
+          <h3>Educação infantil G4</h3>
+          <p class="price">R$ 432,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
+          <img src="Capas Mundo Encantado/INF5.png" alt="Capa do livro Educação infantil G5">
+          <h3>Educação infantil G5</h3>
+          <p class="price">R$ 432,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <!-- Anos iniciais -->
+         <div class="card">
+          <img src="Capas Mundo Encantado/LIN1 (1).png" alt="Capa do livro Ensino Fundamental 1ºAno">
+          <h3>Ensino Fundamental 1ºAno</h3>
+          <p class="price">R$ 864,00</p>
+          <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
+          <img src="Capas Mundo Encantado/Fundamental 1 02AM (1).png" alt="Capa do livro Ensino Fundamental 2ºAno">
+          <h3>Ensino Fundamental 2ºAno</h3>
+          <p class="price">R$ 864,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Mundo Encantado/Fundamental 1 03AM (1).png" alt="Capa do livro Ensino Fundamental 3ºAno">
+          <h3>Ensino Fundamental 3ºAno</h3>
+          <p class="price">R$ 864,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Mundo Encantado/Fundamental 1 04AM (1).png" alt="Capa do livro Ensino Fundamental 4ºAno">
+          <h3>Ensino Fundamental 4ºAno</h3>
+          <p class="price">R$ 864,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 5ºAno">
+          <h3>Ensino Fundamental 5ºAno</h3>
+          <p class="price">R$ 864,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <!-- Anos finais -->
+        <div class="card">
+          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 6ºAno">
+          <h3>Ensino Fundamental 6ºAno</h3>
+          <p class="price">R$ 972,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 7ºAno">
+          <h3>Ensino Fundamental 7ºAno</h3>
+          <p class="price">R$ 972,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 8ºAno">
+          <h3>Ensino Fundamental 8ºAno</h3>
+          <p class="price">R$ 972,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 9ºAno">
+          <h3>Ensino Fundamental 9ºAno</h3>
+          <p class="price">R$ 972,00</p>
+          <button class="add-to-cart">Comprar</button>
         </div>
       </div>
 
