--- a/escola1.html
+++ b/escola1.html
@@ -31,42 +31,49 @@
 
         <div class="product-grid">
             <div class="product-card">
-                <img src="Aldaberto carvalho.jpg" alt="Produto 2"/>
+                <img src="Aldaberto carvalho.jpg" alt="Logo do Instituto Adalberto Carvalho"/>
                 <h2>Inst. Adalberto Carvalho - Matriz</h2>
                 <p>End: R. B- Jaguaripe L, 13 - Fazenda Grande I</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
-                <img src="Aldaberto carvalho.jpg" alt="Produto 2"/>
+                <img src="Aldaberto carvalho.jpg" alt="Logo do Instituto Adalberto Carvalho"/>
                 <h2>Inst. Adalberto Carvalho  - Filial</h2>
                 <p>End: Estrada da paciência , nº 2183, loja 01 Cajazeiras 8</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-inst-filial.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
-                <img src="Aldaberto carvalho.jpg" alt="Produto 2"/>
+                <img src="Aldaberto carvalho.jpg" alt="Logo do Instituto Adalberto Carvalho"/>
                 <h2>Inst. Adalberto Carvalho  - Filial</h2>
                 <p>End: Fazenda grande 1 ,setor 3, quadra b, caminho 13 nº 1</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-inst-filial2.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
-                <img src="unesp.png" alt="Produto 2"/>
+                <img src="#" alt="Logo do Instituto Mundo Encantado"/>
+                <h2>Instituto Mundo Encantado</h2>
+                <p>End: </p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-mundo-encantado.html">ENTRAR</button>
+            </div>
+
+            <div class="product-card">
+                <img src="#" alt="Logo da Creche Escola Viva Criança"/>
                 <h2>Creche Escola Viva Criança</h2>
                 <p>End: Rua Nivaldo Domingos, Quadra K, Lote 24 e 25 - Ipitanga, Lauro de Freitas - BA</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-creche.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
-                <img src="unesp.png" alt="Produto 2"/>
+                <img src="#" alt="Logo da Escola Sena Dantas"/>
                 <h2>Escola Sena Dantas</h2>
                 <p>End: R. Alameda - Parque Ipe, Feira de Santana - BA</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-sena.html">ENTRAR</button>
             </div>
 
             <div class="product-card">
-                <img src="unesp.png" alt="Produto 2"/>
+                <img src="#" alt="Logo do Centro Educacional Agape"/>
                 <h2>Centro Educacional Agape</h2>
                 <p>End: Rua da Mangueira, sn - Vila Sauipe - Mata de S. João</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-agape.html">ENTRAR</button>
@@ -74,7 +81,7 @@
         </div>
 
         <div class="product-card">
-                <img src="unesp.png" alt="Produto 2"/>
+                <img src="#" alt="Logo do Colégio Mario junior"/>
                 <h2>Colégio Mario junior</h2>
                 <p>End: Av. Edgard Santos, 420 - Narandiba, Salvador - BA</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-junior.html">ENTRAR</button>
@@ -82,10 +89,17 @@
         </div>
 
         <div class="product-card">
-                <img src="unesp.png" alt="Produto 2"/>
+                <img src="#" alt="Logo da Escola Matildes de Jesus Santos Brito"/>
                 <h2>Matildes de Jesus Santos Brito</h2>
                 <p>End: Rua da Barragem, 10, Sete de Abril</p>
                 <button class="affiliate-button" data-senha="1234" data-url="loja-matildes.html">ENTRAR</button>
+            </div>
+
+        <div class="product-card">
+                <img src="#" alt="Logo da Escola Leão de Juda"/>
+                <h2>Escola Leão de Juda</h2>
+                <p>End: </p>
+                <button class="affiliate-button" data-senha="1234" data-url="loja-leao.html">ENTRAR</button>
             </div>
         </div>
 
