--- a/loja-sena.html
+++ b/loja-sena.html
@@ -89,46 +89,59 @@
 
       <div class="cards" id="book-cards-container">
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 0,01</p>
+          <img src="Capas Livros Creche/INF2 (1).png" alt="Capa do livro educação infatil G2">
+          <h3>Educação infantil G2</h3>
+          <p class="price">R$386,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro3.png" alt="Five Nights at Freddy's">
-          <h3>Five Nights at Freddy's</h3>
-          <p>Intrínseca</p>
-          <p class="price">R$ 0,02</p>
+          <img src="Capas Livros Creche/INF3.png" alt="Capa do livro educação infatil G3">
+          <h3>Educação infantil G3</h3>
+          <p class="price">R$425,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
-        </div>
-        <div class="card">
-          <img src="livro2.png" alt="Olhos Prateados">
-          <h3>Olhos Prateados</h3>
-          <p>Intrínseca</p>
-          <p class="price">R$ 47,92</p>
+          <img src="Capas Livros Creche/INF4.png" alt="Capa do livro educação infatil G4">
+          <h3>Educação infantil G4</h3>
+          <p class="price">R$516,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
+          <img src="Capas Livros Creche/INF5.png" alt="Capa do livro educação infatil G5">
+          <h3>Educação infantil G5</h3>
+          <p class="price">R$516,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <!-- Anos iniciais -->
+        <div class="card">
+          <img src="Capas Livros Creche/Fundamental 1 01AM (1).png" alt="Capa do livro Fundamental 1">
+          <h3>Ensino Fundamental 1ºAno</h3>
+          <p class="price">R$930,00</p>
+          <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="livro1.png" alt="As Aventuras de Mike">
-          <h3>As Aventuras de Mike</h3>
-          <p>Editora Outro Planeta</p>
-          <p class="price">R$ 42,27</p>
-          <button class="add-to-cart">Comprar</button><br>
+          <img src="Capas Livros Creche/Fundamental 1 02AM (1).png" alt="Capa do livro Fundamental 2">
+          <h3>Ensino Fundamental 2ºAno</h3>
+          <p class="price">R$930,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Livros Creche/Fundamental 1 02AM (1).png" alt="Capa do livro Fundamental 2">
+          <h3>Ensino Fundamental 3ºAno</h3>
+          <p class="price">R$930,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Livros Creche/Fundamental 1 02AM (1).png" alt="Capa do livro Fundamental 2">
+          <h3>Ensino Fundamental 4ºAno</h3>
+          <p class="price">R$930,00</p>
+          <button class="add-to-cart">Comprar</button>
+        </div>
+        <div class="card">
+          <img src="Capas Livros Creche/Fundamental 1 02AM (1).png" alt="Capa do livro Fundamental 2">
+          <h3>Ensino Fundamental 5ºAno</h3>
+          <p class="price">R$930,00</p>
+          <button class="add-to-cart">Comprar</button>
         </div>
       </div>
 
