Att com todas as escolas

--- a/loja-junior.html
+++ b/loja-junior.html
@@ -89,81 +89,81 @@
 
       <div class="cards" id="book-cards-container">
         <div class="card">
-          <img src="Capas Mundo Encantado/INF2 (1).png" alt="Capa do livro Educação infantil G2">
+          <img src="Capas Mario Junior/EVOLUIR - INFANTIL - 2 ANOS - MOD 1.jpg" alt="Capa do livro Educação infantil G2">
           <h3>Educação infantil G2</h3>
           <p class="price">R$ 432,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/INF3.png" alt="Capa do livro Educação infantil G3">
+          <img src="Capas Mario Junior/EVOLUIR - INFANTIL - 3 ANOS - MOD 1.jpg" alt="Capa do livro Educação infantil G3">
           <h3>Educação infantil G3</h3>
           <p class="price">R$ 432,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/INF4.png" alt="Capa do livro Educação infantil G4">
+          <img src="Capas Mario Junior/EVOLUIR - INFANTIL - 4 ANOS - MOD 1.jpg" alt="Capa do livro Educação infantil G4">
           <h3>Educação infantil G4</h3>
           <p class="price">R$ 432,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/INF5.png" alt="Capa do livro Educação infantil G5">
+          <img src="Capas Mario Junior/EVOLUIR - INFANTIL - 5 ANOS - MOD 1.jpg" alt="Capa do livro Educação infantil G5">
           <h3>Educação infantil G5</h3>
           <p class="price">R$ 432,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <!-- Anos iniciais -->
          <div class="card">
-          <img src="Capas Mundo Encantado/LIN1 (1).png" alt="Capa do livro Ensino Fundamental 1ºAno">
+          <img src="Capas Mario Junior/LIN1 (1).png" alt="Capa do livro Ensino Fundamental 1ºAno">
           <h3>Ensino Fundamental 1ºAno</h3>
           <p class="price">R$ 864,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/Fundamental 1 02AM (1).png" alt="Capa do livro Ensino Fundamental 2ºAno">
+          <img src="Capas Mario Junior/EVOLUIR - FUND - 2º ANO - MOD1 - ESTUDANTE.jpg" alt="Capa do livro Ensino Fundamental 2ºAno">
           <h3>Ensino Fundamental 2ºAno</h3>
           <p class="price">R$ 864,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/Fundamental 1 03AM (1).png" alt="Capa do livro Ensino Fundamental 3ºAno">
+          <img src="Capas Mario Junior/EVOLUIR - FUND - 3º ANO - MOD1 - ESTUDANTE.jpg" alt="Capa do livro Ensino Fundamental 3ºAno">
           <h3>Ensino Fundamental 3ºAno</h3>
           <p class="price">R$ 864,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/Fundamental 1 04AM (1).png" alt="Capa do livro Ensino Fundamental 4ºAno">
+          <img src="Capas Mario Junior/EVOLUIR - FUND - 4º ANO - MOD1 - ESTUDANTE.jpg" alt="Capa do livro Ensino Fundamental 4ºAno">
           <h3>Ensino Fundamental 4ºAno</h3>
           <p class="price">R$ 864,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 5ºAno">
+          <img src="Capas Mario Junior/EVOLUIR - FUND - 5º ANO - MOD1 - ESTUDANTE.jpg" alt="Capa do livro Ensino Fundamental 5ºAno">
           <h3>Ensino Fundamental 5ºAno</h3>
           <p class="price">R$ 864,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <!-- Anos finais -->
         <div class="card">
-          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 6ºAno">
+          <img src="Capas Mario Junior/EVOLUIR - FUND - 6º ANO - MOD1.jpg" alt="Capa do livro Ensino Fundamental 6ºAno">
           <h3>Ensino Fundamental 6ºAno</h3>
           <p class="price">R$ 972,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 7ºAno">
+          <img src="Capas Mario Junior/EVOLUIR - FUND - 7º ANO - MOD1.jpg" alt="Capa do livro Ensino Fundamental 7ºAno">
           <h3>Ensino Fundamental 7ºAno</h3>
           <p class="price">R$ 972,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 8ºAno">
+          <img src="Capas Mario Junior/EVOLUIR - FUND - 8º ANO - MOD1.jpg" alt="Capa do livro Ensino Fundamental 8ºAno">
           <h3>Ensino Fundamental 8ºAno</h3>
           <p class="price">R$ 972,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
         <div class="card">
-          <img src="Capas Mundo Encantado/Fundamental 1 05AM (1).png" alt="Capa do livro Ensino Fundamental 9ºAno">
+          <img src="Capas Mario Junior/EVOLUIR - FUND - 9º ANO - MOD1.jpg" alt="Capa do livro Ensino Fundamental 9ºAno">
           <h3>Ensino Fundamental 9ºAno</h3>
           <p class="price">R$ 972,00</p>
           <button class="add-to-cart">Comprar</button>
