--- a/loja-leao.html
+++ b/loja-leao.html
@@ -55,9 +55,9 @@
   <div class="container">
     <nav class="sidebar">
       <div class="school-card">
-        <h2>Matildes</h2>
+        <h2>Escola</h2>
         <img src="unesp.png" alt="Logo da Escola" class="school-logo">
-        <h3 class="school-name" id="currentSchoolName">de Jesus Santos Brito</h3> </div>
+        <h3 class="school-name" id="currentSchoolName"></h3>Leão de Juda</div>
       <nav class="texto">
         <h2>Filtrar</h2>
       </nav>
@@ -87,55 +87,55 @@
 
       <div class="cards" id="book-cards-container">
         <div class="card">
-          <img src="#" alt="#">
+          <img src="Capas Leao de Juda/HORA DE APRENDER - INTEGRADO - 1º ANO - ESTUDANTE.jpg" alt="Capa do livro Ensino Fundamental 1ºAno">
           <h3>Ensino Fundamental 1ºano</h3>
           <p class="price">R$ 390,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
          <div class="card">
-          <img src="#" alt="#">
+          <img src="Capas Leao de Juda/HORA DE APRENDER - INTEGRADO - 2º ANO - ESTUDANTE.jpg" alt="Capa do livro Ensino Fundamental 2ºAno">
           <h3>Ensino Fundamental 2ºano</h3>
           <p class="price">R$ 390,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
          <div class="card">
-          <img src="#" alt="#">
+          <img src="#" alt="Capa do livro Ensino Fundamental 3ºano">
           <h3>Ensino Fundamental 3ºano</h3>
           <p class="price">R$ 580,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
          <div class="card">
-          <img src="#" alt="#">
+          <img src="#" alt="Capa do livro Ensino Fundamental 4ºano">
           <h3>Ensino Fundamental 4ºano</h3>
           <p class="price">R$ 580,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
          <div class="card">
-          <img src="#" alt="#">
+          <img src="#" alt="Capa do livro Ensino Fundamental 5ºano">
           <h3>Ensino Fundamental 5ºano</h3>
           <p class="price">R$ 580,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
          <div class="card">
-          <img src="#" alt="#">
+          <img src="Capas Leao de Juda/EVOLUIR - FUND - 6º ANO - MOD1.jpg" alt="Capa do livro Ensino Fundamental 6ºano">
           <h3>Ensino Fundamental 6ºano</h3>
           <p class="price">R$ 770,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
          <div class="card">
-          <img src="#" alt="#">
+          <img src="Capas Leao de Juda/EVOLUIR - FUND - 7º ANO - MOD1.jpg" alt="Capa do livro Ensino Fundamental 7ºano">
           <h3>Ensino Fundamental 7ºano</h3>
           <p class="price">R$ 770,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
          <div class="card">
-          <img src="#" alt="#">
+          <img src="Capas Leao de Juda/EVOLUIR - FUND - 8º ANO - MOD1.jpg" alt="Capa do livro Ensino Fundamental 8ºano">
           <h3>Ensino Fundamental 8ºano</h3>
           <p class="price">R$ 770,00</p>
           <button class="add-to-cart">Comprar</button>
         </div>
          <div class="card">
-          <img src="#" alt="#">
+          <img src="Capas Leao de Juda/EVOLUIR - FUND - 9º ANO - MOD1.jpg" alt="Capa do livro Ensino Fundamental 9ºAno">
           <h3>Ensino Fundamental 9ºano</h3>
           <p class="price">R$ 770,00</p>
           <button class="add-to-cart">Comprar</button>
